Add modern CustomTkinter GUI with async loading
- Replace tkinter with CustomTkinter for modern themed UI
- Two-column layout: sheets on left, stats/output/monitoring on right
- Async project loading with animated status indicator
- Monitoring countdown timer shows time until next check
- Default monitoring interval set to 60 seconds
- Add screenshot to README
- Update requirements: customtkinter, tiktoken

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 # Core dependencies
-click>=8.0.0     # For CLI interface
+click>=8.0.0          # CLI interface
+customtkinter>=5.0    # Modern themed GUI
+tiktoken>=0.5.0       # Token counting
 
 # Development dependencies
 pytest>=7.0.0
